[gd_scene load_steps=6 format=3 uid="uid://dk5gjbgi8d3fk"]

[ext_resource type="Script" path="res://Menus/gameover.gd" id="1_25gg1"]
[ext_resource type="Theme" uid="uid://0a7264asjqtn" path="res://Assets/font/TextFont.tres" id="1_nnl44"]

[sub_resource type="Animation" id="Animation_jvpvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gameover_titulo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wlu1c"]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gameover_titulo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqe70"]
_data = {
"RESET": SubResource("Animation_jvpvi"),
"fadeIn": SubResource("Animation_wlu1c")
}

[node name="gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_25gg1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="gameover_titulo" type="Label" parent="."]
layout_mode = 2
offset_left = 360.0
offset_top = 97.0
offset_right = 921.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nnl44")
theme_override_colors/font_color = Color(0.926324, 0.379373, 0, 1)
theme_override_colors/font_shadow_color = Color(0.695053, 0.389133, 1, 1)
theme_override_font_sizes/font_size = 91
text = "FIM DE JOGO"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -280.0
offset_top = 785.0
offset_right = 281.0
grow_horizontal = 2
grow_vertical = 2

[node name="btn_restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_nnl44")
text = "Reiniciar"

[node name="btn_finalizar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_nnl44")
text = "Menu"

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jqe70")
}
autoplay = "fadeIn"

[connection signal="pressed" from="VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_finalizar" to="." method="_on_btn_finalizar_pressed"]
